syntax = "proto3";

package communication;

message Request {
    Protocol proto = 1; // 通信协议号
    int32 id = 2; // 请求id，用于确定请求顺序
    bytes body = 3;
}

message Responese {
    int32 code = 1; // 响应code
    int32 id = 2; // 本次请求的id，用于关联一次完整的请求
    string msg = 3;
    bytes body = 4;
}

enum Protocol {
    heart_beat = 0; // 心跳
    token_login = 1; // 令牌登入，建立有效连接
    directory_verification = 2; // 目录验证
    file_diff = 10; // 文件变化，传输变化的文件
}